@@ -50,6 +50,7 @@ AC_OUTPUT([
 Makefile
 bin/Makefile
 data/Makefile
+data/icons/Makefile
 lib/Makefile
 lib/ui/Makefile
 services/Makefile
