@@ -1,0 +1,6 @@
+iconsdir = $(pkgdatadir)/data/icons
+icons_DATA =		\
+	arrow_NE.svg	\
+	arrow_NW.svg	\
+	arrow_SE.svg	\
+	arrow_SW.svg
