@@ -101,6 +101,9 @@ def main():
     _start_matchbox()
     _setup_translations()
 
+    icons_path = env.get_data_path('icons')
+    gtk.icon_theme_get_default().append_search_path(icons_path)
+
     # Do initial setup if needed
     if not get_profile().is_valid():
         win = intro.IntroWindow()
