@@ -1,3 +1,4 @@
+* #2674 Add arrows to hint about the frame corner activation (marco)
 * #2665 Re-arrange device icons in a line at the bottom (marco)
 * #3378 Support changes in activity scope (incomplete!) (smcv, marco)
 * #3081, #3497, #3485 Fix palette sizing and widget placement (benzea)
